--- a/templates/todoapp/Add_task.html
+++ b/templates/todoapp/Add_task.html
@@ -2,20 +2,38 @@
 {% block title %}Tasks{% endblock %}
 
 {% block content %}
-    <h2>Task Manager</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Add Task</button>
-    </form>
+<h2>Task Manager</h2>
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Add Task</button>
+</form>
 
-    {% if tasks %}
-    <ul>
-        {% for task in tasks %}
-        <li>{{ task.title }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
+{% if tasks %}
+<h2>Your Tasks</h2>
+<ul style="list-style-type: none; padding: 0;">
+    {% for task in tasks %}
+    <li
+        style="background: #f3f3f3; margin: 6px 0; padding: 10px; border-radius: 8px; display: flex; justify-content: space-between; align-items: center;">
+        <span>{{ task.title }}</span>
 
-    <a href="{% url 'logout' %}" class="link" style="background:#dc3545; color:white; padding:8px; border-radius:6px; text-decoration:none;">Logout</a>
+        <form method="POST" action="{% url 'delete' task.id %}" style="margin: 0;">
+            {% csrf_token %}
+            <button type="submit" style="
+          background-color: #007bff;
+          color: white;
+          border: none;
+          padding: 6px 12px;
+          border-radius: 6px;
+          cursor: pointer;">Delete</button>
+        </form>
+    </li>
+    {% empty %}
+    <li>No tasks yet!</li>
+    {% endfor %}
+</ul>
+{% endif %}
+
+<a href="{% url 'logout' %}" class="link"
+    style="background:#dc3545; color:white; padding:8px; border-radius:6px; text-decoration:none;">Logout</a>
 {% endblock %}
